# probably-alpha

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  bug_report.json  note.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json  settings.local.json
.omx/: metrics.json  notepad.md  project-memory.json
apps/api/: config.py  main.py  pyproject.toml
apps/api/middleware/: __init__.py  auth.py
apps/api/routers/admin/: __init__.py  _shared.py  runs.py  tenants.py  usage_audit.py
apps/api/routers/assistant/: __init__.py
apps/api/routers/chartist/: __init__.py  _shared.py  backtest.py  korea.py  leaders.py  technicals.py  wizards.py
apps/api/routers/execute/: __init__.py
apps/api/routers/quant/: __init__.py  _shared.py  factors.py  macro.py
apps/api/routers/research/: __init__.py  _shared.py  academic.py  broker.py  knowledge.py  news_reports.py
apps/api/routers/value/: __init__.py  _shared.py  corp_actions.py  derived.py  fnguide.py  screeners.py  valuation.py
apps/api/services/: __init__.py
config/: __init__.py  env_loader.py  krx_etf_universe.csv  krx_universe.csv  minervini_config.json  settings.py
data/: sector_coverage.json  sectors_imported_manifest_2026-04-25.json  sectors_imported_manifest_2026-04-26.json  sectors_manifest_2026-04-25.json  sectors_manifest_2026-04-26.json  sectors_unified_manifest.json  themes.yml
docs/: DATA_SOURCES_CATALOG.md  SECTOR_DATA_COLLECTION.md  SECTOR_INDICATOR_MAP.md
legacy/: README.md
scripts/: auto_backfill.bat  (+55 more)
(+687 files in other folders)
